[REFACTOR] keyword 도메인 리펙토링